--- a/src/component/Menu/_style.scss
+++ b/src/component/Menu/_style.scss
@@ -27,12 +27,40 @@
 
 .submenu-item {
   position: relative;
+  .submenu-title {
+    display: flex;
+    align-items: center;
+  }
+  .arrow-icon {
+    transition: transform .25s ease-in-out;
+    margin-left: 3px;
+  }
+  &:hover {
+    .arrow-icon {
+      transform: rotate(180deg);
+    }
+  }
 }
+
+.is-vertical {
+  .arrow-icon {
+    transform: rotate(0deg) !important;
+  }
+}
+
+.is-vertical.is-opened {
+  .arrow-icon {
+    transform: rotate(180deg) !important;
+  }
+}
+
 .jacky-submenu {
-  display: none;
+  opacity: 0;
+  //display: none;
   list-style: none;
   padding-left: 0;
   white-space: nowrap;
+  transition: opacity .5s ease-in;
   .menu-item {
     padding: $menu-item-padding-y $menu-item-padding-x;
     cursor: pointer;
@@ -45,6 +73,7 @@
 }
 .jacky-submenu.menu-opened {
   display: block;
+  opacity: 1;
 }
 
 .menu-horizontal {
