--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -20,3 +20,8 @@
   transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
   transform-origin: center top;
 }
+
+// @include zoom-animation('top', scaleY(0), scaleY(1), center top);
+// @include zoom-animation('left', scale(.45, .45), scale(1, 1), top left);
+// @include zoom-animation('right', scale(.45, .45), scale(1, 1), top right);
+// @include zoom-animation('bottom', scaleY(0), scaleY(1),  center bottom);
